fix: missing border-radius

--- a/src/components/recipeForm.css
+++ b/src/components/recipeForm.css
@@ -10,6 +10,7 @@
 .form__wrapper {
   background-color: #ffa801;
   padding: 0 10px;
+  border-radius: 3px;
 }
 
 .form {
